--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pandas
-streamlit
-sklearn
-openai
+pandas==2.0.3
+streamlit==1.33.0
+sklearn==1.2.2
+openai==1.7.2
 langchain-openai
-langchain
+langchain==0.1.4
+requests==2.31.0
+warnings
