--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pandas==2.0.3
-streamlit==1.33.0
-scikit-learn==1.2.2
-openai
-langchain-openai
-langchain==0.1.4
+pandas==2.2.2
+numpy==1.26.4
+streamlit==1.36.0
+scikit-learn==1.5.1
+langchain==0.2.10
+langchain-core==0.2.22
+langchain-openai==0.1.17
+openai==1.37.0
 requests
-warnings
